@@ -10,7 +10,7 @@ LICENSE
 
 Sauerbraten game engine source code, any release.
 
-Copyright (C) 2001-2012 Wouter van Oortmerssen, Lee Salzman, Mike Dysart, Robert Pointon, and Quinton Reeves
+Copyright (C) 2001-2013 Wouter van Oortmerssen, Lee Salzman, Mike Dysart, Robert Pointon, and Quinton Reeves
 
 This software is provided 'as-is', without any express or implied
 warranty.  In no event will the authors be held liable for any damages
@@ -78,7 +78,7 @@ Wouter "Aardappel" van Oortmerssen
 http://strlen.com
 
 Lee "eihrul" Salzman 
-http://lee.fov120.com
+http://sauerbraten.org/lee/
 
 Mike "Gilt" Dysart
 
