@@ -1,3 +1,8 @@
+ENet 1.3.10 (October 23, 2013);
+
+* doubled maximum reliable window size
+* fixed RCVTIMEO/SNDTIMEO socket options and also added NODELAY
+
 ENet 1.3.9 (August 19, 2013):
 
 * added duplicatePeers option to ENetHost which can limit the number of peers from duplicate IPs
